# euler-copilot-shell

./: .gitignore  .ruff.toml  README.md  oi-cli.spec  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: copilot-instructions.md
distribution/linux/: euler-copilot-shell.spec
docs/: shell端部署使用手册.md  部署 & 使用手册.md  部署手册.md
docs/development/: TUI应用模块设计.md  shell端部署使用手册.md  后端适配模块设计.md  国际化开发指南.md  日志管理模块设计.md  部署助手模块设计.md  配置管理模块设计.md  项目整体设计.md
docs/development/design/: 后端适配模块设计.md  部署助手模块设计.md  项目整体设计.md
docs/development/i18n/: 国际化开发指南.md  国际化快速入门.md
docs/development/server-side/: openHermes.openapi.json
scripts/deploy/: deploy.sh  deploy.spec  安装部署手册.md
scripts/tools/: filter_debug_log.py  i18n-manager.sh  uninstaller.sh
src/: __version__.py  main.py
src/app/: __init__.py  mcp_widgets.py  settings.py  tui.py  tui_header.py  tui_mcp_handler.py
src/backend/: __init__.py  base.py  factory.py  mcp_handler.py  models.py  openai.py
src/config/: manager.py  model.py
src/i18n/: __init__.py  manager.py
src/log/: __init__.py  manager.py
src/tool/: __init__.py  callback_server.py  command_processor.py  llm_config.py  oi_backend_init.py  oi_llm_config.py  oi_login.py  oi_select_agent.py  validators.py
tests/: README.md  conftest.py
tests/app/: test_agent_manager.py
tests/backend/: test_hermes_client.py  test_llm_id_validation.py  test_model_info.py  test_openai_client.py
tests/tool/: test_browser_availability.py  test_command_processor.py  test_login.py  test_ssl_flags.py  test_token_integration.py  test_token_validation.py
(+64 files in other folders)
