[project]
name = "oi-cli"
version = "0.10.0"
description = "智能 Shell 命令行工具"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MulanPSL-2.0" }
authors = [{ name = "openEuler", email = "contact@openeuler.org" }]
dependencies = [
    "httpx==0.28.1",
    "openai==2.3.0",
    "rich==14.2.0",
    "textual==6.3.0",
    "toml==0.10.2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MulanPSL-2.0 License",
]

[project.urls]
Homepage = "https://gitee.com/openeuler/euler-copilot-shell"

[project.scripts]
oi = "main:main"

[project.optional-dependencies]
dev = ["ruff==0.14.0"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
